# prompt-generate-system

./: .gitignore  pyproject.toml
docs/: project.md
engine/: __init__.py  combiner.py  templates.py
instructions/architecture/: api_restful_design.md  api_restful_design.yaml  db_normalization.md  db_normalization.yaml  documentation_c4_model.md  documentation_c4_model.yaml  pattern_microservices.md  pattern_microservices.yaml  pattern_monolithic.md  pattern_monolithic.yaml  pattern_serverless.md  pattern_serverless.yaml
instructions/lang_python/: error_handling.md  error_handling.yaml
instructions/lang_python/concurrency/: asyncio_basics.md  asyncio_basics.yaml
instructions/lang_python/docstring/: comment_effective.md  comment_effective.yaml  google_style.md  google_style.yaml  numpy_style.md  numpy_style.yaml  restructuredtext.md  restructuredtext.yaml
instructions/lang_python/idiom/: comprehensions.md  comprehensions.yaml  context_managers.md  context_managers.yaml  fstrings.md  (+3 more)
instructions/methodology/: design_db_schema.md  design_db_schema.yaml  development_tdd_cycle.md  development_tdd_cycle.yaml  documentation_adr.md  documentation_adr.yaml  research_tech_comparison.md  research_tech_comparison.yaml
instructions/persona/: brainstormer_options.md  brainstormer_options.yaml  code_reviewer.md  code_reviewer.yaml  explainer_junior.md  explainer_junior.yaml  strict_code_only.md  strict_code_only.yaml
instructions/principles/: error_handling_robust.md  error_handling_robust.yaml  separation_of_concerns.md  separation_of_concerns.yaml  solid.md  solid.yaml
(+22 files in other folders)
